test/error/LexLiteralCharEmpty.ci
public static class Test
{
	public static bool Run()
	{
		int a = ''; //ERROR: Empty character literal
		return true;
	}
}
